--- a/applications/traefik-cert-network-manager/traefik/dashboard/ingress.yaml
+++ b/applications/traefik-cert-network-manager/traefik/dashboard/ingress.yaml
@@ -9,7 +9,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`traefik.local.example.com`)
+    - match: Host(`traefik.local.narybits.site`)
       kind: Rule
       middlewares:
         - name: traefik-dashboard-basicauth
