--- a/applications/traefik-cert-network-manager/cert-manager/certificates/staging/local-narybits-site.yaml
+++ b/applications/traefik-cert-network-manager/cert-manager/certificates/staging/local-narybits-site.yaml
@@ -2,14 +2,14 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: local-example-com
+  name: local-narybits-site
   namespace: default
 spec:
-  secretName: local-example-com-staging-tls
+  secretName: local-narybits-site-staging-tls
   issuerRef:
     name: letsencrypt-staging
     kind: ClusterIssuer
-  commonName: "*.local.example.com"
+  commonName: "*.local.narybits.site"
   dnsNames:
-  - "local.example.com"
-  - "*.local.example.com"
+  - "local.narybits.site"
+  - "*.local.narybits.site"
