--- a/docker-compose/nextcloud.yaml
+++ b/docker-compose/nextcloud.yaml
@@ -1,7 +1,7 @@
-networks:
-  nextcloud:
-    external: true
-    name: nextcloud
+# networks:
+#   nextcloud:
+#     external: true
+#     name: nextcloud
 
 volumes:
   nextcloud:
@@ -38,7 +38,7 @@ services:
     volumes:
       #- ./html:/var/www/html
     environment:
-      #- NEXTCLOUD_TRUSTED_DOMAINS=10.7.7.70 nextcloud.narybits.site nextcloud.armswk.me
+      #- NEXTCLOUD_TRUSTED_DOMAINS= nextcloud.narybits.site nextcloud.armswk.me
       #- MYSQL_PASSWORD=MYSQL_PWD
       - MYSQL_DATABASE=nextcloud
       - MYSQL_USER=nextcloud
