edit terraform ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /applications/traefik-cert-network-manager/cert-manager/issuers/secret-cf-token.yaml
-**/.terraform.*
+**/.terraform.lock.hcl
+**/.terraform/*
