--- a/Learning_Phase/tf-vault/vaults-k3s-yaml/vault-nfs-backup-pv.yaml
+++ b/Learning_Phase/tf-vault/vaults-k3s-yaml/vault-nfs-backup-pv.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: vault-nfs-backup-pv
+  name: vault-backup-pv
 spec:
   capacity:
     storage: 1Gi
   accessModes:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
-  nfs:
-    #path: /export/vault-backups
-    server: 10.7.7.110
   storageClassName: vault-nfs
+  nfs:
+    path: /zpool/k3s-storage/vaults-backup
+    server: 10.7.7.110
