--- a/Learning_Phase/tf-vault/vaults-k3s-yaml/vault-nfs-backup-pvc.yaml
+++ b/Learning_Phase/tf-vault/vaults-k3s-yaml/vault-nfs-backup-pvc.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: vault-nfs-pvc
+  name: vault-backup-pvc
   namespace: vault
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: vault-nfs
   resources:
     requests:
       storage: 1Gi
+  storageClassName: vault-nfs
