tf vault setup and reorganize

--- a/Learning_Phase/tf-vault/vaults-k3s-yaml/vault-backup-pv.yaml
+++ b/Learning_Phase/tf-vault/vaults-k3s-yaml/vault-backup-pv.yaml
@@ -9,6 +9,9 @@ spec:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
   storageClassName: vault-nfs
+  mountOptions:
+     - hard
+     - nfsvers=4
   nfs:
     path: /zpool/k3s-storage/vaults-backup
     server: 10.7.7.110
